--- a/BB.html
+++ b/BB.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<div class="container">
+<div class="prudle">
   <div class="jumbotron">
 <h1>Prudle_Localize("15_BB.htmlHardcodedString_1_pse13n")</h1>
   </div>
